학생 임의 조정

--- a/index.html
+++ b/index.html
@@ -1,14 +1,5 @@
 
 <!DOCTYPE html>
-<!--
-Created using JS Bin
-http://jsbin.com
-
-Copyright (c) 2023 by anonymous (http://jsbin.com/pebatesexa/1/edit)
-
-Released under the MIT license: http://jsbin.mit-license.org
--->
-<meta name="robots" content="noindex">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,6 +10,14 @@ Released under the MIT license: http://jsbin.mit-license.org
             font-family: 'Arial', sans-serif;
             background-color: #f8f8f8;
         }
+      body {
+    text-align: center;
+}
+
+.centered-content {
+    margin: auto;
+    width: 80%;
+}
       .text-box {
     border: 1px solid #000; /* 검은색 테두리 */
     padding: 20px; /* 내부 여백 */
