--- a/index.html
+++ b/index.html
@@ -1,5 +1,41 @@
 
 <!DOCTYPE html>
+<!--
+Created using JS Bin
+http://jsbin.com
+
+Copyright (c) 2023 by anonymous (http://jsbin.com/pebatesexa/1/edit)
+
+Released under the MIT license: http://jsbin.mit-license.org
+-->
+<meta name="robots" content="noindex">
+<!--
+Created using JS Bin
+http://jsbin.com
+
+Copyright (c) 2023 by anonymous (http://jsbin.com/pebatesexa/1/edit)
+
+Released under the MIT license: http://jsbin.mit-license.org
+-->
+<meta name="robots" content="noindex">
+<!--
+Created using JS Bin
+http://jsbin.com
+
+Copyright (c) 2023 by anonymous (http://jsbin.com/pebatesexa/1/edit)
+
+Released under the MIT license: http://jsbin.mit-license.org
+-->
+<meta name="robots" content="noindex">
+<!--
+Created using JS Bin
+http://jsbin.com
+
+Copyright (c) 2023 by anonymous (http://jsbin.com/pebatesexa/1/edit)
+
+Released under the MIT license: http://jsbin.mit-license.org
+-->
+<meta name="robots" content="noindex">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,14 +54,15 @@
     margin: auto;
     width: 80%;
 }
-      .text-box {
+    .text-box {
     border: 1px solid #000; /* 검은색 테두리 */
     padding: 20px; /* 내부 여백 */
-    margin: 20px 0; /* 위아래 여백 */
-    width: 80%; /* 상자의 너비 */
-    background-color: #f0f0f0; /* 배경 색상 */
-    text-align: left; /* 텍스트 왼쪽 정렬 */
+    margin: auto; /* 가운데 정렬을 위해 수정 */
+    width: 60%; /* 상자의 너비 */
+    background-color: #f0f0e0; /* 배경 색상 */
+    text-align: left; /* 텍스트 가운데 정렬로 수정 */
 }
+
 
         h2 {
             color: #5d5d5d;
@@ -49,30 +86,57 @@
             width: 90%;
         }
         button {
-            background-color: #f5a9bc;
+            background-color: #f1a7ac;
             color: white;
-            padding: 10px 20px;
+            padding: 20px 30px;
             border: none;
-            border-radius: 5px;
+            border-radius: 10px;
             cursor: pointer;
             margin: 10px;
+            font-size: larger;
         }
         button:hover {
             background-color: #f48fb1;
         }
+      /* 페이지 하단의 footer 스타일 */
+footer {
+    position: fixed; /* 고정된 위치 */
+    left: 0; /* 왼쪽 가장자리 */
+    bottom: 0; /* 하단 가장자리 */
+    width: 100%; /* 전체 너비 */
+    background-color: #333; /* 배경색 */
+    color: white; /* 글자색 */
+    text-align: center; /* 텍스트 가운데 정렬 */
+    padding: 10px 0; /* 상하 패딩 */
+}
+
+footer p {
+    margin: 0; /* 마진 제거 */
+    padding: 0; /* 패딩 제거 */
+    font-size: 0.8em; /* 글자 크기 */
+}
+      
     </style>
 </head>
 <body>
     <h2>학생 임의 조정</h2>
     <div class="text-box">
-      1. 재배치된 학생 명렬을 불러오세요. </br>
+      1. 이전 단계에서 재배치된 학생 명렬을 불러오세요. </br>
       2. 학생의 학급을 임의조정할 수 있습니다. </br>
-      3. 맨 하단 "Save Changes" 버튼을 클릭하면 수정된 명단을 내려받을 수 있습니다.
+      3. 맨 하단 "수정된 자료 내려받기" 버튼을 클릭하면</br> &nbsp;&nbsp;&nbsp;&nbsp;수정된 명단을 내려받을 수 있습니다.
     </div>
   </br>
     <input type="file" id="csvFileInput" accept=".csv" onchange="loadCSVFile(event)"><br><br>
     <div id="groupTables"></div>
-    <button onclick="saveCSV()">Save Changes</button>
+<button onclick="saveCSV()">수정된 자료 내려받기</button> 
+
+    <div style="margin-bottom: 100px;">
+        
+    </div>
+
+  <footer>
+    <p>&copy; 2023 덩어리쌤&홍쌤 All Rights Reserved.</p>
+  </footer>
 
     <script>
         let students = [];
@@ -162,19 +226,21 @@ function renderGroups() {
         }
 
 function saveCSV() {
-    let csvContent = "data:text/csv;charset=utf-8,\ufeff" 
-        + Object.keys(students[0]).join(",") 
-        + "\\n" 
-        + students.map(s => Object.values(s).join(",")).join("\\n");
+    let BOM = "\ufeff";
+    let csvContent = students.map(s => Object.values(s).join(",")).join("\n");
+    let blob = new Blob([BOM + csvContent], { type: 'text/csv;charset=utf-8;' });
 
-    var encodedUri = encodeURI(csvContent);
-    var link = document.createElement("a");
-    link.setAttribute("href", encodedUri);
-    link.setAttribute("download", "modified_student_groups.csv");
+    let link = document.createElement("a");
+    link.setAttribute("href", URL.createObjectURL(blob));
+    link.setAttribute("download", "my_data.csv");
     document.body.appendChild(link);
+
     link.click();
-    document.body.removeChild(link);
 }
+
+
+
+
 
     </script>
 </body>
